tests/ui/consts/dangling_raw_ptr.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/dangling_raw_ptr.rs:1:1
   |
LL | const FOO: *const u32 = {
   | ^^^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered a dangling reference (use-after-free)
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 8, align: 8) {
               ╾ALLOC0<imm>╼                         │ ╾──────╼
           }

error: encountered dangling pointer in final value of constant
  --> $DIR/dangling_raw_ptr.rs:10:1
   |
LL | const BAR: Union = {
   | ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
